# dailybing

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  Controller.h  Controller.m  DailyBing  DailyBingInfo.plist  GNUmakefile  README.md  Window.h  Window.m  Windowv1.m  build.sh  changes.md  compile_commands.json  compile_flags.txt  configure  font.NimbusSans.sh  font.SanFranciscoDisplay.sh  install.sh  license.md  main.m  notes.md
NSPatch/: NSGuiDefines.h  NSPatch.h  NSWindow+SetIsVisible.h  nspatch.md
Resources/: CatLock.desktop  LockScreen  QtSingleApplication.py  cache  catlock.py  imageCache.plist
Resources/gallery/: ElephantTwins_EN-US2939253051  MossyGrottoFalls_EN-US5828454161  NIrelandGiants_EN-US3269727738
Resources/gallery/themes/: wallpaper.description
Source/: AppDelegate.h  AppDelegate.m  DBDataIndex.h  DBDataIndex.m  DBImageView.h  DBImageView.m  DBWindow copy.m  DBWindow.h  DBWindow.m  NSImage+SaveAs.h  NSImage+SaveAs.m  ResourceManager.h  ResourceManager.m  Window.h  Window.m  main.m  test.m  test2.m  test3.m
Source copy/: AppDelegate.h  AppDelegate.m  DBImageView.m  DBWindow copy.h  DBWindow.h  DBWindow.m  GNUmakefile  main.m
Source/Extensions/: NSImage+ProportionalScaling.h  NSImage+ResizeImage.h  NSImage+ResizeImage.m  NSImage+SaveAs.h  NSImage+SaveAs.m
Source/Interactive/: DBDataIndex.m  DBImageView.h  DBImageView.m  DBWindow.h  DBWindow.m  ImageContainer.h  ImageContainer.m  ImagePanel.h  ImagePanel.m  ImageWindow.h  ImageWindow.m  NSImage+SaveAs.m
Source/LockScreen/: BackView.h  BackView.m  Controller.h  Controller.m  LockProtocol.h  LockWindow.h  LockWindow.m  NSImage+ProportionalScaling.m  TextField.h  TextField.m  main.m
Source/LockScreen/Plugins/Clock/: GNUmakefile
prototypes/: Window copy.m  Windowv1.m  Windowv2.m
